# openOii

./: .gitignore  README.md  docker-compose.yml
backend/: .coverage  .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py  tools.py  utils.py
backend/app/agents/prompts/: character.py  director.py  onboarding.py  review.py  scriptwriter.py  storyboard.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  config.py  generation.py  projects.py  text.py
backend/app/db/: session.py
backend/app/models/: project.py
backend/app/schemas/: project.py  text.py
backend/app/services/: __init__.py  llm.py  text.py  text_factory.py
backend/app/tools/: media_tools.py
backend/tests/: conftest.py
backend/tests/integration/: test_workflow.py
backend/tests/test_agents/: test_utils.py
backend/tests/test_api/: test_text.py
backend/tests/test_services/: test_text_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/app/: App.tsx  main.tsx  vite-env.d.ts
frontend/app/hooks/: useIntersectionObserver.ts  useParentMessages.ts  useWebSocket.ts
frontend/app/i18n/: index.ts
frontend/app/pages/: HomePage.tsx  NewProjectPage.tsx  ProjectPage.tsx  ProjectsPage.tsx
frontend/app/services/: api.ts
frontend/app/stores/: authStore.ts  settingsStore.ts  sidebarStore.ts  themeStore.ts
frontend/app/styles/: globals.css  tokens.css
frontend/app/types/: index.ts
frontend/app/utils/: configGroups.ts  debounce.ts  (+2 more)
(+29 files in other folders)
